objects/Org_Constant_Custom_Settings__c.object
<CustomObject>
    <fields>
        <fullName>daysCount__c</fullName>
        <label>daysCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enddate__c</fullName>
        <label>enddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recordTypeId__c</fullName>
        <label>recordTypeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <type>DateTime</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For the Batch Class</description>
    <label>Org Constant Custom Settings</label>
</CustomObject>